--- a/content/Decision_Tree_Regression_from_Scratch.html
+++ b/content/Decision_Tree_Regression_from_Scratch.html
@@ -102,7 +102,7 @@
   
     <p>When splitting stops, the node becomes a leaf, and it outputs a constant prediction: usually the average of the target values for the samples in that leaf.</p>
   
-    <h2>🧪 Using Scikit-Learn’s DecisionTreeRegressor</h2>
+    <h2>Using Scikit-Learn's DecisionTreeRegressor</h2>
     <p>While building models from scratch teaches us a lot about the underlying mechanics, in practice, we often rely on libraries like scikit-learn to streamline the workflow. Scikit-learn provides a highly optimized and easy-to-use implementation of decision trees for both classification and regression tasks.
 
         The following code demonstrates how to apply a decision tree regressor on the California Housing dataset, which contains information about housing in California districts such as median income, number of rooms, and house age. The goal is to predict the median house value for a given set of features.
@@ -298,7 +298,7 @@
     <p>Writing a decision tree regressor from scratch demystifies one of the most popular algorithms in machine learning. It’s all about finding the right place to split — again and again — until further splitting no longer helps. With just a bit of math and recursion, we’ve rebuilt a fundamental ML tool from the ground up.</p>
   </div>
   <h4 class="mt-4"> Reference</h4>
-  <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/decision_tree.ipynb" target="_blank">📓 decision_tree.ipynb on GitHub</a></p>
+  <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/decision_tree.ipynb" target="_blank">decision_tree.ipynb on GitHub</a></p>
 
   </div>
   </body>
