--- a/content/Langchains_with_Ollama.html
+++ b/content/Langchains_with_Ollama.html
@@ -105,7 +105,7 @@
     <h4> Two Ways to Use the Ollama Model</h4>
     <p>LangChain supports Ollama models — and there are two primary interfaces depending on your use case.</p>
 
-    <h5>🧪 Option 1: Plain Completion</h5>
+    <h5>Option 1: Plain Completion</h5>
     <pre class="bg-light p-3 rounded"><code>from langchain.llms import Ollama
 
 llm = Ollama(model="gemma3")
