--- a/content/Lasso_Regression_from_Scratch.html
+++ b/content/Lasso_Regression_from_Scratch.html
@@ -85,7 +85,7 @@
 
   <hr />
 
-  <h4 class="mt-4">📌 What is Lasso Regression?</h4>
+  <h4 class="mt-4">What is Lasso Regression?</h4>
   <p>
     Lasso Regression is a linear regression model that includes an L1 regularization term. It not only helps prevent overfitting but also performs automatic feature selection by shrinking some coefficients to zero. 
   </p>
@@ -289,7 +289,7 @@ print(" R² Score:", round(r2, 4))
   </p>
 
   <h4 class="mt-4"> Reference</h4>
-  <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Ridge_Lasso_Regression.ipynb" target="_blank">📓 ridge_lasso_regression.ipynb on GitHub</a></p>
+  <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Ridge_Lasso_Regression.ipynb" target="_blank">ridge_lasso_regression.ipynb on GitHub</a></p>
 
 </div>
 </body>
