--- a/content/Ridge_Regression_from_Scratch.html
+++ b/content/Ridge_Regression_from_Scratch.html
@@ -85,7 +85,7 @@
           </div>
           <hr />
         
-          <h4 class="mt-4">📌 What is Regularization?</h4>
+          <h4 class="mt-4">What is Regularization?</h4>
         <p>
             When building predictive models, it’s tempting to chase perfection on the training data. But this can lead to <strong>overfitting</strong> — where your model memorizes noise instead of learning patterns.
             That’s where <strong>regularization</strong> comes in.
@@ -214,8 +214,7 @@
         
           <h4 class="mt-4"> Reference</h4>
           <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Ridge_Lasso_Regression.ipynb" target="_blank">
-            📓 ridge_lasso_reg.ipynb on GitHub
-          </a></p>
-        </div>
-        </body>
+    </a></p>
+</div>
+</body>
 </html>
