--- a/content/Setting_up_Ollama.html
+++ b/content/Setting_up_Ollama.html
@@ -155,10 +155,10 @@
     <p>
       Ollama is a fantastic tool if you want local inference without the hassle of API keys or cloud latency. It’s fast, private, and incredibly easy to use. With just a few commands, you’ll have state-of-the-art models running right on your machine.
     </p>
-    <p class="fw-bold">Give it a try, and see how it fits into your AI workflow! 🧪</p>
+    <p class="fw-bold">Give it a try, and see how it fits into your AI workflow!</p>
 
     <h4 class="mt-4"> Reference</h4>
-    <p><a href="https://ollama.com/" target="_blank">🌐 ollama.com</a></p>
+    <p><a href="https://ollama.com/" target="_blank">ollama.com</a></p>
   </div>
 </body>
 </html>
