--- a/content/LangChain_Document_Loaders.html
+++ b/content/LangChain_Document_Loaders.html
@@ -119,7 +119,7 @@ docs = loader.load()
     </code></pre>
     <p>Loads all text files recursively from a directory — great for datasets or log archives.</p>
 
-    <h4>🌐 Loading from the Web</h4>
+    <h4>Loading from the Web</h4>
     <pre class="bg-light p-3 rounded"><code>
 from langchain_community.document_loaders import WebBaseLoader
 loader = WebBaseLoader("https://pulkit12dhingra.github.io/Blog/content/Hello_World.html")
