--- a/content/Linear_Regression_OLS.html
+++ b/content/Linear_Regression_OLS.html
@@ -105,7 +105,7 @@
 <h4 class="mt-4"> Dataset Overview: California Housing</h4>
 <p>For this tutorial, we’re using the <strong>California Housing Dataset</strong> from scikit-learn. It's a classic regression dataset used for predicting the median house value across various districts in California.</p>
 
-<p>📌 <strong>Dataset Details:</strong></p>
+<p><strong>Dataset Details:</strong></p>
 <ul>
   <li><strong>Type:</strong> Regression</li>
   <li><strong>Samples:</strong> 20,640</li>
@@ -295,7 +295,7 @@ r2_sklearn = r2_score(y_test, y_sklearn_pred)</code></pre>
 <h4 class="mt-4"> Reference</h4>
 <p>You can explore the full notebook used to generate this blog on GitHub:</p>
 <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regression_OLS.ipynb" target="_blank">
-  📓 Linear_Regression_OLS.ipynb on GitHub
+  Linear_Regression_OLS.ipynb on GitHub
 </a></p>
 
 </div>
