--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <a href="mailto:pulkit12dhingra@gmail.com" target="_blank" rel="noopener noreferrer">Email</a>
         </div>
         
-        <div class="d-flex align-items-center mb-2"><i class="bi bi-link-45deg me-2"></i><a target="_blank" rel="noopener noreferrer" href="https://pulkit12dhingra.github.io/portfolio/">Website</a></div>
+        <div class="d-flex align-items-center mb-2"><i class="bi bi-link-45deg me-2"></i><a target="_blank" rel="noopener noreferrer" href="https://pulkit12dhingra.github.io/portfolio/">Portfolio</a></div>
         <div class="d-flex align-items-center mb-2">
             <i class="fab fa-kaggle me-2"></i>
             <a target="_blank" rel="noopener noreferrer" href="https://www.kaggle.com/pulkit12dhingra">Kaggle</a>
